fix desktop swiper - add overflow:hidden on info

--- a/src/components/BandMembers/BandMembers.module.scss
+++ b/src/components/BandMembers/BandMembers.module.scss
@@ -41,6 +41,7 @@
   }
     @media screen and (min-width:1440px) {
       margin-top: 0;
+      overflow: hidden;
     }
 
   &_text{
@@ -112,6 +113,7 @@
     @media screen and (min-width:1440px) {
       // margin-top: 76px;
       padding: 40px 40px 0 40px;
+      
     }
   }
   &_name{
